# connectwise-etl

./: .gitignore  2025-09-24-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-24-isnt-that-file-all-sorts-of-stupid-srcconnectw.txt  BC_PIPELINE_FIXES.md  BC_SIMPLIFIED_README.md  CLAUDE.md  COMPLETE_MODEL_INTEGRATION_GUIDE.md  ConnectWise_ETL_Full_Load.ipynb  Current_Work.md  FABRIC_DEPLOYMENT.md  Fabric-optimizations.md  INVOICE_ID_FIXES.md  Incremental_Refresh_Manage.ipynb  LOCAL_TESTING_GUIDE.md  LOCAL_TESTING_QUICKSTART.md  MODEL_IMPROVEMENTS.md  Manage-Invoices.ipynb  PSA_BC_INTEGRATION_DESIGN.md  PSA_filtering.md  PYDANTIC_WARNING_FIX.md  README.md  REORGANIZATION_SUMMARY.md  SCHEMA_CONVERSION_FIX.md  SIMPLIFICATION_SUMMARY.md  UNIFIED_LAKEHOUSE_ARCHITECTURE.md  Updated_Notebook.ipynb  basedpyright_errors.txt  bc_full_refresh_notebook.py  bronze_silver_example.py  build_package.py  connectwise-fabric-tickets.md  create_temp_schema.py  deploy_to_fabric.md  detailed_test_results.txt  dim_bridge_old.csv  endpoint_results.json  examine_custom_fields.py  fabric_bc_integration_complete.py  fabric_bi_views.sql  fabric_bi_views_corrected.sql  (+74 more)
BC_ETL-main/BC_ETL-main/: .gitignore  README.md  base_config.yaml  data.manifest.cdm.json  pyproject.toml
BC_ETL-main/BC_ETL-main/bc_etl/: __init__.py  main.py
BC_ETL-main/BC_ETL-main/bc_etl/bronze/: __init__.py  reader.py
BC_ETL-main/BC_ETL-main/bc_etl/gold/: __init__.py  dimensions.py  hierarchy.py  keys.py  utils.py
BC_ETL-main/BC_ETL-main/bc_etl/gold/facts/: __init__.py  fact_accounts_payable.py  fact_accounts_receivable.py  fact_agreement.py  fact_finance.py  fact_inventory_value.py  fact_item.py  fact_jobs.py  fact_purchase.py  fact_sales.py  utils.py
BC_ETL-main/BC_ETL-main/bc_etl/pipeline/: __init__.py  bronze_silver.py  silver_gold.py  writer.py
BC_ETL-main/BC_ETL-main/bc_etl/silver/: __init__.py  cleanse.py  dimension.py  scd.py  standardize.py
BC_ETL-main/BC_ETL-main/bc_etl/utils/: __init__.py  config_loader.py  config_utils.py  dataframe_utils.py  decorators.py  exceptions.py  logging.py  naming.py  schema_utils.py  spark_utils.py  table_utils.py  watermark_manager.py
BC_ETL-main/BC_ETL-main/cdm_manifests/: AccountingPeriod-50.cdm.json  CompanyInformation-79.cdm.json  Currency-4.cdm.json  CustLedgerEntry-21.cdm.json  DetailedCustLedgEntry-379.cdm.json  Item-27.cdm.json  JobLedgerEntry-169.cdm.json  SalesInvoiceHeader-112.cdm.json  SalesInvoiceLine-113.cdm.json  Vendor-23.cdm.json
BC_ETL-main/BC_ETL-main/typings/delta/: __init__.py  tables.py
BC_ETL-main/BC_ETL-main/typings/logfire/: __init__.py
Src/ManageAPI/: repomix-output.txt
backup/connectwise_models/: __init__.py  agreement.py  expense_entry.py  invoice.py  product_item.py  time_entry.py  unposted_invoice.py
cdm_manifests/: AccountingPeriod-50.cdm.json  CompanyInformation-79.cdm.json  Currency-4.cdm.json  CustLedgerEntry-21.cdm.json  Customer-18.cdm.json  DetailedCustLedgEntry-379.cdm.json  DetailedVendorLedgEntry-380.cdm.json  Dimension-348.cdm.json  DimensionSetEntry-480.cdm.json  DimensionValue-349.cdm.json  GLAccount-15.cdm.json  GLEntry-17.cdm.json  GeneralLedgerSetup-98.cdm.json  Item-27.cdm.json  Job-167.cdm.json  JobLedgerEntry-169.cdm.json  Resource-156.cdm.json  SalesInvoiceHeader-112.cdm.json  SalesInvoiceLine-113.cdm.json  Vendor-23.cdm.json  VendorLedgerEntry-25.cdm.json
config/: pipeline.yaml
configs/: bc-codegen.toml  connectwise-dimensions.yaml  connectwise-facts.yaml  jira-codegen.toml  psa-codegen.toml  table_schema.py
connectwise-etl/: .gitignore  CLAUDE.md  custom_fields_sample.json  pytest.ini  test_generation.toml
connectwise-etl/configs/: generation.toml
connectwise-etl/scripts/: run_tests.sh
connectwise-etl/tests/: conftest.py
debug_output/: raw_products.json  raw_time_entries.json  temp_schema.json
docs/: mcp-tree-sitter-setup.md  separated-pipelines.md
entity_samples/: Agreement.json  ExpenseEntry.json  PostedInvoice.json  ProductItem.json  TimeEntry.json  UnpostedInvoice.json
fabric_api/: README_MODEL_INTEGRATION.md  __init__.py  api_utils.py  bc_extractor.py  bc_medallion_pipeline.py  bc_medallion_pipeline_enhanced.py  bc_medallion_pipeline_enhanced_with_models.py  bc_transformer.py  bronze_loader.py  cdm_example.py  cdm_model_generator.py  client.py  config.py  delta_utils.py  extract.py  generate_bc_models.py  generate_bc_models_camelcase.py  generate_cdm_models.py  log_utils.py  main.py  models.py  onelake_utils.py  orchestration.py  pipeline.py  pipeline_psa_enhanced.py  pipeline_psa_enhanced_with_models.py  schemas.py  spark_utils.py  transform.py  unified_lakehouse_orchestrator.py  upload.py  utils.py  validation.py
fabric_api/bc_models/: __init__.py  models.py
fabric_api/cdm_models/: __init__.py  models.py
fabric_api/connectwise_models/: __init__.py  agreement.py  expense_entry.py  invoice.py  models.py  posted_invoice.py  product_item.py  reference_model.py  time_entry.py  unposted_invoice.py
fabric_api/core/: __init__.py  (+10 more)
scripts/: bc_cell_6_gold_dimensions.py  bc_cell_7_gold_facts.py  bc_check_dimensions.py  bc_check_fact_schemas.py  bc_compare_dimension_bridges.py  bc_etl_pipeline_example.py  bc_full_refresh_notebook.py  bc_gold_dimensions_cell.py  bc_simplified_notebook.py  check_table_config.py  incremental_refresh.py  incremental_update_notebook.py  refresh_dimensions.py  refresh_dimensions_notebook.py  refresh_facts_with_rich_dimensions.py  refresh_rich_dimensions_notebook.py  regenerate_models_v2.py  run_tree_sitter_server.sh  test_tree_sitter_mcp.py
sql/: fabric_bi_views_final.sql
tests/: README.md  __init__.py  run_local_tests.py  test_agreement_validation.py  test_client_fields.py  test_client_mock.py  test_expense_validation.py  test_generic_extractor_simple.py  test_hours_billed_logic.py  test_integration_connectwise_live.py  test_invoice_validation.py  test_model_validation.py  test_pipeline_bronze_silver.py  test_pipeline_local.py  test_product_validation.py  test_recent_changes_integration.py  test_time_validation.py
unified_etl/: __init__.py  main.py
(+197 files in other folders)
